--- a/SalaryCalculation.Api/Properties/launchSettings.json
+++ b/SalaryCalculation.Api/Properties/launchSettings.json
@@ -1,27 +1,9 @@
 {
-  "$schema": "http://json.schemastore.org/launchsettings.json",
-  "iisSettings": {
-    "windowsAuthentication": false,
-    "anonymousAuthentication": true,
-    "iisExpress": {
-      "applicationUrl": "http://localhost:39728",
-      "sslPort": 44326
-    }
-  },
   "profiles": {
-    "IIS Express": {
-      "commandName": "IISExpress",
-      "launchBrowser": true,
-      "launchUrl": "weatherforecast",
-      "environmentVariables": {
-        "ASPNETCORE_ENVIRONMENT": "Development"
-      }
-    },
     "SalaryCalculation.Api": {
       "commandName": "Project",
       "launchBrowser": true,
-      "launchUrl": "employee",
-      "applicationUrl": "https://localhost:5001;http://localhost:5000",
+      "launchUrl": "employee/GetEmployees",
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Development"
       }
